// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button 组件测试 ButtonElement 样式组件快照 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  width: 100%;
  outline: none;
  border: 0px;
  margin: 0px;
  border-radius: 4px;
  padding: 10px 14px;
  background: #fff;
  cursor: pointer;
  color: #484646;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  background: #fff;
  box-shadow: 6px 0 16px -8px rgb(0 0 0 / 8%),9px 0 28px 0 rgb(0 0 0 / 0%);
}

<button
    class="c0"
    pattern="forbidden"
    type="button"
  >
    按钮
  </button>
</DocumentFragment>
`;

exports[`button 组件测试 button 快照 1`] = `
<DocumentFragment>
  .c2 {
  display: block;
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
}

.c2::before {
  display: block;
  content: "";
  width: 100%;
  height: 4px;
  background: #000000a6;
  -webkit-animation: jMsNkg 10s ease-out;
  animation: jMsNkg 10s ease-out;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c0 {
  position: relative;
  width: 100%;
  outline: none;
  border: 0px;
  margin: 0px;
  border-radius: 4px;
  padding: 10px 14px;
  background: #fff;
  cursor: pointer;
  color: #484646;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  background: #fff;
  box-shadow: 6px 0 16px -8px rgb(0 0 0 / 8%),9px 0 28px 0 rgb(0 0 0 / 0%);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
    class="c0"
    pattern="forbidden"
    type="button"
  >
    <div
      class="c1"
    >
      测试
      <span
        class="c2"
      />
    </div>
  </button>
</DocumentFragment>
`;
